# Video

./: .gitignore  .gitmodules  README.md  analysis_options.yaml  build.sh  dartdoc_options.yaml  ffigen.yaml  lidar.yaml  lidar_export.json  pubspec.yaml  realsense.yaml
.github/: pubspec_overrides.yaml
.github/workflows/: analyze.yml  documentation.yml
docs/: __404error.html  index.html  index.json  search.html
docs/realsense/: realsense-library-sidebar.html  realsense-library.html
docs/utils/: MatrixUtils-extension-sidebar.html  MatrixUtils.html  Uint8ToMat-extension-sidebar.html  Uint8ToMat.html  VideoCaptureUtils-extension-sidebar.html  VideoCaptureUtils.html  utils-library-sidebar.html  utils-library.html
docs/utils/MatrixUtils/: encodeJpg.html
docs/utils/Uint8ToMat/: toOpenCVMat.html
docs/utils/VideoCaptureUtils/: autofocus.html  focus.html  fps.html  pan.html  roll.html  setResolution.html  tilt.html  zoom.html
docs/video/: BurtRsConfig-class-sidebar.html  BurtRsConfig-class.html  BurtRsStatus-class-sidebar.html  BurtRsStatus-class.html  BurtRsStatus-enum-sidebar.html  BurtRsStatus.html  CameraIsolate-class-sidebar.html  CameraIsolate-class.html  CameraManager-class-sidebar.html  CameraManager-class.html  Collection-class-sidebar.html  Collection-class.html  DepthFramePayload-class-sidebar.html  DepthFramePayload-class.html  DetailsPayload-class-sidebar.html  DetailsPayload-class.html  FramePayload-class-sidebar.html  FramePayload-class.html  IsolatePayload-class-sidebar.html  IsolatePayload-class.html  LibRealSenseBindings-class-sidebar.html  LibRealSenseBindings-class.html  LogPayload-class-sidebar.html  LogPayload-class.html  NativeFrames-class-sidebar.html  NativeFrames-class.html  NativeFramesUtils-extension-sidebar.html  NativeFramesUtils.html  NativeRealSense-class-sidebar.html  NativeRealSense-class.html  OpenCVCameraIsolate-class-sidebar.html  OpenCVCameraIsolate-class.html  PeriodicTimer-class-sidebar.html  PeriodicTimer-class.html  RealSenseInterface-class-sidebar.html  RealSenseInterface-class.html  RealSenseIsolate-class-sidebar.html  RealSenseIsolate-class.html  Resolution.html  VideoController-class-sidebar.html  (+16 more)
docs/video/BurtRsConfig/: BurtRsConfig.html  depth_height.html  depth_width.html  rgb_height.html  rgb_width.html  scale.html
docs/video/BurtRsStatus/: BurtRsStatus.html  BurtRsStatus_no_device-constant.html  BurtRsStatus_ok-constant.html  BurtRsStatus_resolution_unknown-constant.html  BurtRsStatus_scale_unknown-constant.html  BurtRsStatus_too_many_devices-constant.html  fromValue.html  value.html  values-constant.html
docs/video/CameraIsolate/: CameraIsolate.html  details.html  dispose.html  disposeCamera.html  fpsCount.html  fpsTimer.html  frameTimer.html  initCamera.html  isReadingFrame.html  name.html  onData.html  onSpawn.html  run.html  sendFrame.html  sendFrames.html  sendLog.html  sendStatus.html  start.html  statusTimer.html  stop.html  updateDetails.html
docs/video/CameraManager/: CameraManager.html  dispose.html  init.html  onData.html  onDisconnect.html  parent.html  stopAll.html
docs/video/Collection/: Collection.html  cameras.html  dispose.html  init.html  onDisconnect.html  parent.html  restart.html  videoServer.html
docs/video/DepthFramePayload/: DepthFramePayload.html  address.html  dispose.html  frame.html
docs/video/DetailsPayload/: DetailsPayload.html  details.html
docs/video/FramePayload/: FramePayload.html  address.html  details.html  dispose.html  frame.html  image.html  length.html
docs/video/IsolatePayload/: IsolatePayload.html
docs/video/LibRealSenseBindings/: LibRealSenseBindings.fromLookup.html  LibRealSenseBindings.html  NativeFrames_free.html  RealSense_create.html  RealSense_free.html  RealSense_getDepthFrame.html  RealSense_getDeviceConfig.html  RealSense_getDeviceName.html  RealSense_init.html  RealSense_startStream.html  RealSense_stopStream.html
docs/video/LogPayload/: LogPayload.html  level.html  message.html
docs/video/NativeFrames/: NativeFrames.html  colorized_data.html  colorized_length.html  depth_data.html  depth_length.html  rgb_data.html  rgb_length.html
docs/video/NativeFramesUtils/: depthFrame.html  dispose.html
docs/video/NativeRealSense/: NativeRealSense.html
docs/video/OpenCVCameraIsolate/: OpenCVCameraIsolate.html  camera.html  disposeCamera.html  initCamera.html  sendFrames.html  updateDetails.html
docs/video/PeriodicTimer/: cancel.html  (+7 more)
lib/: dartcv4.dart  realsense.dart  utils.dart  video.dart
lib/src/: camera.dart  camera_isolate.dart  camera_isolates.dart  collection.dart  constants.dart  depthcamera_isolate.dart  ffi.dart  frame.dart  functions.dart  lidar.dart  main.dart  main_isolate.dart  opencv_camera.dart  parent_isolate.dart  periodic_timer.dart  realsense.dart  realsense_isolate.dart  server.dart  udp.dart
realsensesdk/: ffigen.yaml
realsensesdk/src/: librealsense_ffi.c  librealsense_ffi.h
src/: CMakeCache.txt  CMakeLists.txt  Makefile  build.bat  build.sh  build_lidar.bat  ffi.dart  librealsense.c  librealsense.h  main.dart  realsense.cpp  realsense.hpp  realsense_ffi.cpp  realsense_ffi.h  realsense_internal.cpp  realsense_internal.hpp
src/lidar/: CMakeLists.txt  lidar.cpp  lidar.h
test/: video_test.dart
(+71 files in other folders)
